@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN trunk):
 ----------------------------
+- correct scaling of symbol GAP and PATTERN (#3752)
+
 - remove references to SWF/MING
 
 - CGI runtime substitution requires a validation pattern (was optional before) (#3522)
